--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.290.0",
+    "mongodb": "^6.12.0",
+    "mongoose": "^8.9.5",
     "next": "14.0.0",
     "react": "^18",
     "react-dom": "^18",
